--- a/src/00_welcome/index.html
+++ b/src/00_welcome/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
+    <script src="index.js"></script>
     <title>Winstory - Welcome</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <img src="../../assets/logo.svg" alt="Winstory Logo" class="logo">
 
         <div class="nav">
-            <a href="https://winstory.io">Home</a> | <a href="#">&nbsp; Explorer</a>
+            <a href="https://winstory.io">Home</a> | <a href="#">Explorer</a>
         </div>
     </header>
 
@@ -61,5 +62,4 @@
         </div>
     </main>
 </body>
-<script src="index.js"></script>
 </html>
