--- a/src/00_welcome/index00.html
+++ b/src/00_welcome/index00.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index00.css">
     <title>Winstory - Welcome</title>
 </head>
 <body>
@@ -61,5 +61,5 @@
         </div>
     </main>
 </body>
-<script src="index.js"></script>
+<script src="index00.js"></script>
 </html>
